--- a/Sources/iDonateAlert/iDonateAlert.storyboard
+++ b/Sources/iDonateAlert/iDonateAlert.storyboard
@@ -112,6 +112,9 @@
                             <constraint firstItem="dIw-IV-3GP" firstAttribute="top" secondItem="Aaf-Da-noB" secondAttribute="bottom" constant="12" id="yZx-vg-FXx"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="alertMessageLabel" destination="zSH-3I-QZN" id="IBJ-Uk-4Nn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
